--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,43 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
-  "version": "0.0.0",
+  "name": "ledwax-web-ui",
+  "description": "LEDWax IoT Web UI",
+  "version": "0.1.0",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "app/bower_components",
+    "bower_components",
+    "test*",
+    "**/*_test*",
+    "e2e*",
+    "demo*",
+    "config/*.conf.js",
+    "sitemap.xml",
+    "LICENSE",
+    "README*",
+    "Gruntfile.js",
+    "package.json"
+  ],
+  "devDependencies": {
+    "angular-mocks": "^1.5.5"
+  },
   "dependencies": {
-    "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "angular-loader": "~1.4.0",
-    "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0"
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "angular-loader": "^1.5.5",
+    "angular-mocks": "^1.5.5",
+    "angular-bootstrap": "^1.3.2",
+    "angular-cookies": "^1.5.5",
+    "angular-sanitize": "^1.5.5",
+    "angular-animate": "^1.5.5",
+    "angular-translate": "^2.11.0",
+    "angular-translate-loader-static-files": "^2.11.0",
+    "angular-translate-storage-cookie": "^2.11.0",
+    "html5-boilerplate": "^5.3.0",
+    "bootstrap-css": "^3.3.6",
+    "ng-bootstrap-alerts": "^1.1.1"
   }
 }
