--- a/bower.json
+++ b/bower.json
@@ -7,19 +7,20 @@
   "private": true,
   "ignore": [
     "**/.*",
-    "node_modules",
-    "app/bower_components",
-    "bower_components",
-    "test*",
+    "**/node_modules",
+    "public-ledwax-web-ui/app/bower_components",
+    "/bower_components",
+    "**/test*",
     "**/*_test*",
-    "e2e*",
-    "demo*",
-    "config/*.conf.js",
-    "sitemap.xml",
-    "LICENSE",
-    "README*",
-    "Gruntfile.js",
-    "package.json"
+    "**/e2e*",
+    "**/demo*",
+    "**/config/*.conf.js",
+    "**/sitemap.xml",
+    "**/LICENSE",
+    "**/NOTICE",
+    "**/README*",
+    "**/Gruntfile.js",
+    "**/package.json"
   ],
   "devDependencies": {
     "angular-mocks": "^1.5.5"
@@ -38,6 +39,7 @@
     "angular-translate-storage-cookie": "^2.11.0",
     "html5-boilerplate": "^5.3.0",
     "bootstrap-css": "^3.3.6",
-    "ng-bootstrap-alerts": "^1.1.1"
+    "ng-bootstrap-alerts": "^1.1.1",
+    "q": "^2.0.2"
   }
 }
