--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "hapi": "^13.3.0"
   },
   "scripts": {
     "postinstall": "bower install",
@@ -50,7 +51,6 @@
     "grunt-svgmin": "^3.2.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
-    "http-server": "^0.6.1",
     "isarray": "^1.0.0",
     "jasmine-core": "^2.4.1",
     "jshint-stylish": "^2.1.0",
