--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "hapi": "^13.3.0"
+    "hapi": "^13.3.0",
+    "inert": "^3.2.0"
   },
   "scripts": {
     "postinstall": "bower install",
