--- a/package.json
+++ b/package.json
@@ -70,13 +70,14 @@
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
     "isarray": "^1.0.0",
+    "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jshint-stylish": "^2.1.0",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
     "karma-coverage": "^0.5.5",
     "karma-firefox-launcher": "^0.1.7",
-    "karma": "^0.13.22",
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.2",
     "karma-ng-scenario": "^0.1.0",
