--- a/package.json
+++ b/package.json
@@ -1,36 +1,16 @@
 {
   "name": "ledwax-web-ui",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "author": "Free Beachler",
   "description": "LEDWax IoT Web UI",
   "repository": {
     "type": "git",
     "url": "https://tbd.git"
   },
   "license": "Apache-2.0",
-  "dependencies": {
-    "boom": "^3.1.2",
-    "config": "^1.20.1",
-    "glob": "^7.0.3",
-    "glue": "^3.2.0",
-    "good": "^6.6.0",
-    "good-console": "^5.3.1",
-    "handlebars": "^4.0.5",
-    "hapi": "^13.3.0",
-    "hapi-swagger": "^5.0.1",
-    "hoek": "^3.0.4",
-    "inert": "^3.2.0",
-    "isarray": "^1.0.0",
-    "joi": "^8.0.5",
-    "lodash": "^4.11.1",
-    "moment": "^2.13.0",
-    "mongoose": "^4.4.12",
-    "path": "^0.12.7",
-    "vision": "^4.1.0",
-    "visionary": "^4.0.0"
-  },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "",
     "prestart": "npm install",
     "start": "node index.js",
     "pretest": "npm install",
@@ -40,15 +20,51 @@
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor e2e-tests/protractor.conf.js",
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','src/modules/public-ledwax-webui/app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'src/modules/public-ledwax-webui/app/index-async.html');\""
   },
   "bugs": {
     "url": "https://github.com/angular/angular-seed/issues"
   },
   "homepage": "https://github.com/angular/angular-seed#readme",
-  "main": "app/app.js",
+  "main": "index.js",
+  "dependencies": {
+    "archiver": "^1.1.0",
+    "asap": "^2.0.5",
+    "assert": "^1.4.1",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "del": "^2.2.2",
+    "filepath": "^1.1.0",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.1",
+    "glue": "^4.0.0",
+    "good": "^6.2.3",
+    "good-console": "^5.3.2",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.3.0",
+    "hapi": "^15.1.1",
+    "hapi-postgres-connection": "^6.1.0",
+    "hoek": "^4.1.0",
+    "inert": "^4.0.2",
+    "isarray": "^2.0.1",
+    "joi": "^9.1.1",
+    "jshint-stylish": "^2.2.1",
+    "load-grunt-tasks": "^3.5.2",
+    "mongoose": "^4.6.3",
+    "path": "^0.12.7",
+    "reflect-metadata": "^0.1.8",
+    "run-sequence": "^1.2.2",
+    "rxjs": "^5.0.0-rc.1",
+    "systemjs": "0.19.39",
+    "time-grunt": "^1.4.0",
+    "util": "^0.10.3",
+    "vision": "^4.1.0",
+    "visionary": "^6.0.2",
+    "zone.js": "^0.6.25"
+  },
   "devDependencies": {
     "bower": "^1.7.9",
+    "concurrently": "^3.0.0",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-concurrent": "^2.3.0",
@@ -57,37 +73,39 @@
     "grunt-contrib-connect": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-htmlmin": "^1.3.0",
+    "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "^2.3.1",
-    "grunt-karma": "^0.12.2",
+    "grunt-karma": "^2.0.0",
     "grunt-newer": "^1.2.0",
     "grunt-ng-annotate": "^2.0.2",
-    "grunt-svgmin": "^3.2.0",
+    "grunt-svgmin": "^4.0.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
-    "isarray": "^1.0.0",
+    "isarray": "^2.0.1",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jshint-stylish": "^2.1.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.5",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
-    "karma-junit-reporter": "^0.4.2",
-    "karma-ng-scenario": "^0.1.0",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.1.0",
+    "karma-ng-scenario": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lite-server": "^2.2.2",
     "load-grunt-tasks": "^3.5.0",
     "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.7",
-    "protractor": "^2.5.1",
-    "shelljs": "^0.2.6",
-    "time-grunt": "^1.3.0"
-  },
-  "author": "Free Beachler"
+    "protractor": "^4.0.9",
+    "shelljs": "^0.7.4",
+    "time-grunt": "^1.3.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
+  }
 }
