--- a/src/modules/public-ledwax-web-ui/package.json
+++ b/src/modules/public-ledwax-web-ui/package.json
@@ -1,5 +1,20 @@
 {
   "name": "LEDWax Web UI",
   "version": "0.0.1",
-  "dependencies": ["inert", "vision"]
+  "dependencies": {
+    "@angular/common": "~2.0.2",
+    "@angular/compiler": "~2.0.2",
+    "@angular/core": "~2.0.2",
+    "@angular/forms": "~2.0.2",
+    "@angular/http": "~2.0.2",
+    "@angular/platform-browser": "~2.0.2",
+    "@angular/platform-browser-dynamic": "~2.0.2",
+    "@angular/router": "~3.0.2",
+    "@angular/upgrade": "~2.0.2",
+    "angular-in-memory-web-api": "~0.1.5",
+    "inert": "^4.0.2",
+    "vision": "^4.1.0"
+  },
+  "devDependencies": {
+  }
 }
