--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "prestart": "npm install",
     "start": "node index.js",
     "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js  --single-run",
+    "test": "./node_modules/jasmine/bin/jasmine.js",
+    "test-single-run": "./node_modules/jasmine/bin/jasmine.js  --single-run",
+    "karma-test": "karma start karma.conf.js",
+    "karma-test-single-run": "karma start karma.conf.js  --single-run",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
@@ -40,21 +42,22 @@
     "glue": "^4.0.0",
     "good": "^6.2.3",
     "good-console": "^5.3.2",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.3.0",
     "hapi": "^15.1.1",
     "hapi-postgres-connection": "^6.1.0",
     "hoek": "^4.1.0",
     "inert": "^4.0.2",
     "isarray": "^2.0.1",
+    "jasmine-node": "^1.14.5",
     "joi": "^9.1.1",
     "jshint-stylish": "^2.2.1",
     "load-grunt-tasks": "^3.5.2",
     "mongoose": "^4.6.3",
+    "particle-api-js": "^6.0.7",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.0.0-rc.1",
+    "sequelize": "^3.24.3",
     "systemjs": "0.19.39",
     "time-grunt": "^1.4.0",
     "util": "^0.10.3",
@@ -64,6 +67,7 @@
   },
   "devDependencies": {
     "bower": "^1.7.9",
+    "browser-sync": "^2.17.3",
     "concurrently": "^3.0.0",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
@@ -85,6 +89,9 @@
     "grunt-svgmin": "^4.0.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-nodemon": "^2.2.1",
     "isarray": "^2.0.1",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
