update package scripts with local gulp and jasmine
updated package.json scripts

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "scripts": {
     "postinstall": "",
     "prestart": "npm install",
-    "start": "node index.js",
+    "start": "./node_modules/bin/gulp",
     "pretest": "npm install",
-    "test": "./node_modules/jasmine/bin/jasmine.js",
-    "test-single-run": "./node_modules/jasmine/bin/jasmine.js  --single-run",
+    "test": "./node_modules/bin/jasmine",
+    "test-single-run": "./node_modules/bin/jasmine --single-run",
     "karma-test": "karma start karma.conf.js",
-    "karma-test-single-run": "karma start karma.conf.js  --single-run",
+    "karma-test-single-run": "karma start karma.conf.js --single-run",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
