update package scripts

--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "prestart": "npm install",
     "start": "./node_modules/bin/gulp",
     "pretest": "npm install",
-    "test": "./node_modules/bin/jasmine",
-    "test-single-run": "./node_modules/bin/jasmine --single-run",
-    "karma-test": "karma start karma.conf.js",
-    "karma-test-single-run": "karma start karma.conf.js --single-run",
+    "test": "./node_modules/.bin/jasmine",
+    "test-single-run": "./node_modules/.bin/jasmine --single-run",
+    "karma-test": "./node_modules/.bin/karma start karma.conf.js",
+    "karma-test-single-run": "./node_modules/.bin/karma start karma.conf.js --single-run",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
+    "protractor": "./node_modules/.bin/protractor e2e-tests/protractor.conf.js",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','src/modules/public-ledwax-webui/app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'src/modules/public-ledwax-webui/app/index-async.html');\""
   },
   "bugs": {
