added auth and users tests;
big effort to get jasmine tests working with sequelize and hapi-sequelize plugins; mockserver loads hapi-sequelize; add stubbed models; add particle-config module; stubbed folders from sequelize-cli remain; added usercontroller with tests; added routes and JOI validation to existing routes;

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "postinstall": "",
     "prestart": "npm install",
-    "start": "./node_modules/bin/gulp",
-    "pretest": "npm install",
-    "test": "./node_modules/.bin/jasmine",
-    "test-single-run": "./node_modules/.bin/jasmine --single-run",
+    "start": "./node_modules/.bin/gulp",
+    "prekarma-test": "npm install",
+    "test": "export LEDWAX_ENVIRO=test; ./node_modules/jasmine/bin/jasmine.js",
+    "test-single-run": "./node_modules/jasmine/bin/jasmine.js --single-run",
     "karma-test": "./node_modules/.bin/karma start karma.conf.js",
     "karma-test-single-run": "./node_modules/.bin/karma start karma.conf.js --single-run",
     "preupdate-webdriver": "npm install",
@@ -44,6 +44,7 @@
     "good-console": "^5.3.2",
     "hapi": "^15.1.1",
     "hapi-postgres-connection": "^6.1.0",
+    "hapi-sequelize": "^3.0.4",
     "hoek": "^4.1.0",
     "inert": "^4.0.2",
     "isarray": "^2.0.1",
