--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "fs": "0.0.1-security",
     "glob": "^7.1.1",
     "glue": "^4.0.0",
-    "good": "^6.2.3",
-    "good-console": "^5.3.2",
+    "good": ">=6.2.3 <7.0.0",
+    "good-console": ">=5.3.2 <6.0.0",
     "hapi": "^15.1.1",
     "hapi-postgres-connection": "^6.1.0",
     "hapi-sequelize": "^3.0.4",
@@ -111,6 +111,7 @@
     "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "^4.0.9",
+    "sequelize-cli": "^2.4.0",
     "shelljs": "^0.7.4",
     "time-grunt": "^1.3.0",
     "typescript": "^2.0.3",
