--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "hapi": "^15.1.1",
     "hapi-postgres-connection": "^6.1.0",
     "hapi-sequelize": "^3.0.4",
+    "hapi-swagger": "^7.2.0",
     "hoek": "^4.1.0",
     "inert": "^4.0.2",
     "isarray": "^2.0.1",
