--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "LEDWax IoT Web UI and REST API",
   "repository": {
     "type": "git",
-    "url": "https://tbd.git"
+    "url": "https://github.com/tenaciousRas/ledwax-web-ui"
   },
   "license": "Apache-2.0",
   "scripts": {
@@ -53,7 +53,6 @@
     "joi": "^9.1.1",
     "jshint-stylish": "^2.2.1",
     "load-grunt-tasks": "^3.5.2",
-    "mongoose": "^4.6.3",
     "particle-api-js": "^6.0.7",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
