--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "joi": "^9.1.1",
     "jshint-stylish": "^2.2.1",
     "load-grunt-tasks": "^3.5.2",
+    "lodash": "^4.16.4",
     "particle-api-js": "^6.0.7",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
