added save devices method with test coverage
save device with update; file permissions changed to 0644 after new enviro setup; code formatting fixes finally!

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "postinstall": "",
     "prestart": "npm install",
-    "start": "./node_modules/.bin/gulp",
+    "start": "gulp",
     "prekarma-test": "npm install",
     "test": "export LEDWAX_ENVIRO=test; ./node_modules/jasmine/bin/jasmine.js",
     "test-single-run": "./node_modules/jasmine/bin/jasmine.js --single-run",
@@ -34,6 +34,7 @@
     "asap": "^2.0.5",
     "assert": "^1.4.1",
     "bootstrap": "^3.3.7",
+    "browser-sync": "^2.17.5",
     "core-js": "^2.4.1",
     "del": "^2.2.2",
     "filepath": "^1.1.0",
@@ -45,27 +46,27 @@
     "hapi": "^15.1.1",
     "hapi-postgres-connection": "^6.1.0",
     "hapi-sequelize": "^3.0.4",
-    "hapi-swagger": "^7.2.0",
+    "hapi-swagger": "^7.4.0",
     "hoek": "^4.1.0",
     "inert": "^4.0.2",
     "isarray": "^2.0.1",
     "jasmine-node": "^1.14.5",
-    "joi": "^9.1.1",
+    "joi": "^9.2.0",
     "jshint-stylish": "^2.2.1",
     "load-grunt-tasks": "^3.5.2",
     "lodash": "^4.16.4",
-    "particle-api-js": "^6.0.7",
+    "particle-api-js": "^6.2.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.0.0-rc.1",
-    "sequelize": "^3.24.3",
+    "sequelize": "^3.24.4",
     "systemjs": "0.19.39",
     "time-grunt": "^1.4.0",
     "util": "^0.10.3",
     "vision": "^4.1.0",
     "visionary": "^6.0.2",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "bower": "^1.7.9",
