npm outdated update

--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "lodash": "^4.16.4",
     "particle-api-js": "^6.2.0",
     "path": "^0.12.7",
+    "protractor": "^4.0.10",
+    "q": "^1.4.1",
     "reflect-metadata": "^0.1.8",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.0.0-rc.1",
     "sequelize": "^3.24.4",
-    "systemjs": "0.19.39",
+    "systemjs": "0.19.40",
     "time-grunt": "^1.4.0",
     "util": "^0.10.3",
     "vision": "^4.1.0",
@@ -88,7 +90,7 @@
     "grunt-filerev": "^2.3.1",
     "grunt-karma": "^2.0.0",
     "grunt-newer": "^1.2.0",
-    "grunt-ng-annotate": "^2.0.2",
+    "grunt-ng-annotate": "^3.0.0",
     "grunt-svgmin": "^4.0.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^3.0.1",
