add ledwaxdevicediscover controller
discover controller with async impl; move particle_config object to json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prestart": "npm install",
     "start": "gulp",
     "prekarma-test": "npm install",
-    "test": "export LEDWAX_ENVIRO=test; ./node_modules/jasmine/bin/jasmine.js",
+    "test": "LEDWAX_ENVIRO=test && ./node_modules/jasmine/bin/jasmine.js",
     "test-single-run": "./node_modules/jasmine/bin/jasmine.js --single-run",
     "karma-test": "./node_modules/.bin/karma start karma.conf.js",
     "karma-test-single-run": "./node_modules/.bin/karma start karma.conf.js --single-run",
@@ -33,6 +33,7 @@
     "archiver": "^1.1.0",
     "asap": "^2.0.5",
     "assert": "^1.4.1",
+    "async": "^2.1.2",
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.17.5",
     "core-js": "^2.4.1",
