--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"license": "Apache-2.0",
 	"scripts": {
-		"postinstall": "",
+		"postinstall": "bower install",
 		"prestart": "npm install",
 		"start": "gulp",
 		"prekarma-test": "npm install",
@@ -20,8 +20,8 @@
 		"karma-test-single-run": "./node_modules/karma/bin/karma start karma.conf.js --single-run",
 		"preupdate-webdriver": "npm install",
 		"update-webdriver": "webdriver-manager update",
-		"start-emulator": "cd ../emulator && (npm start &) && cd -",
-		"start-protractor-web": "(LEDWAX_ENVIRO=test; npm start &)",
+		"start-emulator": "cd ../emulator && (nohup npm start >emulator.out 2>&1 &) && cd -",
+		"start-protractor-web": "(LEDWAX_ENVIRO=test; nohup npm start >web-ui.out 2>&1 &)",
 		"protractor-start": "npm run start-emulator && npm run start-protractor-web",
 		"protractor": "LEDWAX_ENVIRO=test && ./node_modules/protractor/bin/protractor test-e2e/protractor.conf.js",
 		"update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','src/modules/public-ledwax-webui/app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'src/modules/public-ledwax-webui/app/index-async.html');\""
