--- a/package.json
+++ b/package.json
@@ -1,128 +1,136 @@
 {
-	"name": "ledwax-web-ui",
-	"private": true,
-	"version": "0.2.0",
-	"author": "Free Beachler",
-	"description": "LEDWax IoT Web UI and REST API",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/tenaciousRas/ledwax-web-ui"
-	},
-	"license": "Apache-2.0",
-	"scripts": {
-		"postinstall": "bower install",
-		"prestart": "npm install",
-		"start": "gulp",
-		"prekarma-test": "npm install",
-		"test": "LEDWAX_ENVIRO=test && ./node_modules/jasmine/bin/jasmine.js",
-		"test-single-run": "LEDWAX_ENVIRO=test && ./node_modules/jasmine/bin/jasmine.js --single-run",
-		"karma-test": "LEDWAX_ENVIRO=test && node ./node_modules/karma/bin/karma start karma.web.conf.js",
-		"karma-test-single-run": "./node_modules/karma/bin/karma start karma.conf.js --single-run",
-		"preupdate-webdriver": "npm install",
-		"update-webdriver": "webdriver-manager update",
-		"start-emulator": "cd ../emulator && (nohup npm start >emulator.out 2>&1 &) && cd -",
-		"start-protractor-web": "(LEDWAX_ENVIRO=test; nohup npm start >web-ui.out 2>&1 &)",
-		"protractor-start": "npm run start-emulator && npm run start-protractor-web",
-		"protractor": "LEDWAX_ENVIRO=test && ./node_modules/protractor/bin/protractor test-e2e/protractor.conf.js",
-		"update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','src/modules/public-ledwax-webui/app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'src/modules/public-ledwax-webui/app/index-async.html');\""
-	},
-	"bugs": {
-		"url": "https://github.com/angular/angular-seed/issues"
-	},
-	"homepage": "https://github.com/angular/angular-seed#readme",
-	"main": "index.js",
-	"dependencies": {
-		"archiver": "^1.1.0",
-		"asap": "^2.0.5",
-		"assert": "^1.4.1",
-		"async": "^2.1.2",
-		"bootstrap": "^3.3.7",
-		"browser-sync": "^2.17.5",
-		"core-js": "^2.4.1",
-		"del": "^2.2.2",
-		"filepath": "^1.1.0",
-		"fs": "0.0.1-security",
-		"glob": "^7.1.1",
-		"glue": "^4.0.0",
-		"good": ">=6.2.3 <7.0.0",
-		"good-console": ">=5.3.2 <6.0.0",
-		"hapi": "^15.1.1",
-		"hapi-postgres-connection": "^6.1.0",
-		"hapi-sequelize": "^3.0.4",
-		"hapi-swagger": "^7.4.0",
-		"hoek": "^4.1.0",
-		"inert": "^4.0.2",
-		"isarray": "^2.0.1",
-		"jasmine-node": "^1.14.5",
-		"joi": "^9.2.0",
-		"jshint-stylish": "^2.2.1",
-		"load-grunt-tasks": "^3.5.2",
-		"lodash": "^4.16.4",
-		"particle-api-js": "^6.2.0",
-		"path": "^0.12.7",
-		"protractor": "^4.0.10",
-		"q": "^1.4.1",
-		"reflect-metadata": "^0.1.8",
-		"run-sequence": "^1.2.2",
-		"rxjs": "^5.0.0-rc.1",
-		"sequelize": "^3.24.4",
-		"systemjs": "0.19.40",
-		"time-grunt": "^1.4.0",
-		"util": "^0.10.3",
-		"vision": "^4.1.0",
-		"visionary": "^6.0.2",
-		"zone.js": "^0.6.26"
-	},
-	"devDependencies": {
-		"bower": "^1.7.9",
-		"browser-sync": "^2.17.3",
-		"concurrently": "^3.0.0",
-		"grunt": "^1.0.1",
-		"grunt-autoprefixer": "^3.0.4",
-		"grunt-concurrent": "^2.3.0",
-		"grunt-contrib-clean": "^1.0.0",
-		"grunt-contrib-concat": "^1.0.0",
-		"grunt-contrib-connect": "^1.0.1",
-		"grunt-contrib-copy": "^1.0.0",
-		"grunt-contrib-cssmin": "^1.0.1",
-		"grunt-contrib-htmlmin": "^2.0.0",
-		"grunt-contrib-imagemin": "^1.0.0",
-		"grunt-contrib-jshint": "^1.0.0",
-		"grunt-contrib-uglify": "^2.0.0",
-		"grunt-contrib-watch": "^1.0.0",
-		"grunt-filerev": "^2.3.1",
-		"grunt-karma": "^2.0.0",
-		"grunt-newer": "^1.2.0",
-		"grunt-ng-annotate": "^3.0.0",
-		"grunt-svgmin": "^4.0.0",
-		"grunt-usemin": "^3.1.1",
-		"grunt-wiredep": "^3.0.1",
-		"gulp": "^3.9.1",
-		"gulp-load-plugins": "^1.3.0",
-		"gulp-nodemon": "^2.2.1",
-		"isarray": "^2.0.1",
-		"jasmine": "^2.4.1",
-		"jasmine-core": "^2.4.1",
-		"jshint-stylish": "^2.1.0",
-		"karma": "^1.3.0",
-		"karma-chrome-launcher": "^2.0.0",
-		"karma-cli": "^1.0.1",
-		"karma-coverage": "^1.1.1",
-		"karma-firefox-launcher": "^1.0.0",
-		"karma-jasmine": "^1.0.2",
-		"karma-junit-reporter": "^1.1.0",
-		"karma-ng-scenario": "^1.0.0",
-		"karma-phantomjs-launcher": "^1.0.2",
-		"lite-server": "^2.2.2",
-		"load-grunt-tasks": "^3.5.0",
-		"log": "^1.4.0",
-		"phantomjs": "^2.1.7",
-		"phantomjs-prebuilt": "^2.1.7",
-		"protractor": "^4.0.9",
-		"sequelize-cli": "^2.4.0",
-		"shelljs": "^0.7.4",
-		"time-grunt": "^1.3.0",
-		"typescript": "^2.0.3",
-		"typings": "^1.4.0"
-	}
+  "name": "ledwax-web-ui",
+  "private": true,
+  "version": "0.2.0",
+  "author": "Free Beachler",
+  "description": "LEDWax IoT Web UI and REST API",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tenaciousRas/ledwax-web-ui"
+  },
+  "license": "Apache-2.0",
+  "scripts": {
+    "postinstall": "bower install",
+    "prestart": "npm install && export LEDWAX_ENVIRO=dev",
+    "start": "gulp",
+    "prestartProd": "export LEDWAX_ENVIRO=prod",
+    "startProd": "gulp",
+    "pretest": "export LEDWAX_ENVIRO=test",
+    "test": "./node_modules/jasmine/bin/jasmine.js",
+    "pretest-single-run": "export LEDWAX_ENVIRO=test",
+    "test-single-run": "./node_modules/jasmine/bin/jasmine.js --single-run",
+    "prekarma-test": "npm install && export LEDWAX_ENVIRO=test",
+    "karma-test": "node ./node_modules/karma/bin/karma start karma.web.conf.js",
+    "prekarma-test-single-run": "export LEDWAX_ENVIRO=test",
+    "karma-test-single-run": "./node_modules/karma/bin/karma start karma.conf.js --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "start-emulator": "cd ../emulator && (nohup npm start >emulator.out 2>&1 &) && cd -",
+    "prestart-protractor-web": "export LEDWAX_ENVIRO=test",
+    "start-protractor-web": "(nohup gulp >web-ui.out 2>&1 &)",
+    "protractor-start": "npm run start-emulator && npm run start-protractor-web",
+    "protractor": "export LEDWAX_ENVIRO=test && ./node_modules/protractor/bin/protractor test-e2e/protractor.conf.js",
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','src/modules/public-ledwax-webui/app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'src/modules/public-ledwax-webui/app/index-async.html');\""
+  },
+  "bugs": {
+    "url": "https://github.com/angular/angular-seed/issues"
+  },
+  "homepage": "https://github.com/angular/angular-seed#readme",
+  "main": "index.js",
+  "dependencies": {
+    "archiver": "^1.1.0",
+    "asap": "^2.0.5",
+    "assert": "^1.4.1",
+    "async": "^2.1.2",
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.17.5",
+    "core-js": "^2.4.1",
+    "del": "^2.2.2",
+    "filepath": "^1.1.0",
+    "fs": "0.0.1-security",
+    "glob": "^7.1.1",
+    "glue": "^4.0.0",
+    "good": ">=6.2.3 <7.0.0",
+    "good-console": ">=5.3.2 <6.0.0",
+    "hapi": "^15.1.1",
+    "hapi-postgres-connection": "^6.1.0",
+    "hapi-sequelize": "^3.0.4",
+    "hapi-swagger": "^7.4.0",
+    "hoek": "^4.1.0",
+    "inert": "^4.0.2",
+    "isarray": "^2.0.1",
+    "jasmine-node": "^1.14.5",
+    "joi": "^9.2.0",
+    "jshint-stylish": "^2.2.1",
+    "load-grunt-tasks": "^3.5.2",
+    "lodash": "^4.16.4",
+    "particle-api-js": "^6.2.0",
+    "path": "^0.12.7",
+    "protractor": "^4.0.10",
+    "q": "^1.4.1",
+    "reflect-metadata": "^0.1.8",
+    "run-sequence": "^1.2.2",
+    "rxjs": "^5.0.0-rc.1",
+    "secure-random": "^1.1.1",
+    "sequelize": "^3.24.4",
+    "systemjs": "0.19.40",
+    "time-grunt": "^1.4.0",
+    "util": "^0.10.3",
+    "vision": "^4.1.0",
+    "visionary": "^6.0.2",
+    "zone.js": "^0.6.26"
+  },
+  "devDependencies": {
+    "bower": "^1.7.9",
+    "browser-sync": "^2.17.3",
+    "concurrently": "^3.0.0",
+    "grunt": "^1.0.1",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-htmlmin": "^2.0.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-karma": "^2.0.0",
+    "grunt-newer": "^1.2.0",
+    "grunt-ng-annotate": "^3.0.0",
+    "grunt-svgmin": "^4.0.0",
+    "grunt-usemin": "^3.1.1",
+    "grunt-wiredep": "^3.0.1",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-nodemon": "^2.2.1",
+    "isarray": "^2.0.1",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "jshint-stylish": "^2.1.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.1.0",
+    "karma-ng-scenario": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lite-server": "^2.2.2",
+    "load-grunt-tasks": "^3.5.0",
+    "log": "^1.4.0",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "^4.0.9",
+    "sequelize-cli": "^2.4.0",
+    "shelljs": "^0.7.4",
+    "time-grunt": "^1.3.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
+    "yargs": "^6.3.0"
+  }
 }
