--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "angular-translate-storage-cookie": "^2.11.0",
     "html5-boilerplate": "^5.3.0",
     "bootstrap-css": "^3.3.6",
-    "ng-bootstrap-alerts": "^1.1.1"
+    "ng-bootstrap-alerts": "^1.1.1",
+    "angular-color-picker": "angularjs-color-picker#^2.7.1"
   }
 }
